5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4363/executions/1649_1054.log
== SUBMITION (2019-04-11 19:28:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("coordenada x:"))
b = float(input("coordenada y:"))
if (2*a+b=3):
	msg= " ponto pertence a reta"
else:
	msg= "ponto nao pertence a reta"
print(msg)
-- EXECUTION TIME:
0.156911
-- ERROR:
  File "/home/codebench/codes/1649/1054/main.py", line 6
    if (2*a+b=3):
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:28:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("coordenada x:"))
b = float(input("coordenada y:"))
if (2*a+b=3):
	msg= " ponto pertence a reta"
else:
	msg= "ponto nao pertence a reta"
print(msg)
-- ERROR:
File "XXXX", line 6
    if (2*a+b=3):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:28:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("coordenada x:"))
b = float(input("coordenada y:"))
if (2*a+b==3):
	msg= " ponto pertence a reta"
else:
	msg= "ponto nao pertence a reta"
print(msg)
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:28:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("coordenada x:"))
b = float(input("coordenada y:"))
if (2*a+b==3):
	msg= " ponto pertence a reta"
else:
	msg= "ponto nao pertence a reta"
print(msg)
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:28:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
a = float(input("coordenada x:"))
b = float(input("coordenada y:"))
if (2*a+b==3):
	msg= " ponto pertence a reta"
else:
	msg= "ponto nao pertence a reta"
print(msg)
-- EXECUTION TIME:
0.160178
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
